# C-Coil

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  cuda_build.py  output.txt  requirements.txt  setup.py  values.txt  values_MInductance_general.txt
data/: values_MInductance_zAxis.txt
docs/: Doxyfile.in
examples/MATLAB/: Arrangements_surf.m  Coil_field_surf.m  (+3 more)
image_generation_tool/: .gitignore  Cargo.toml
include/: Coil.h  CoilData.h  ComputeMethod.h  Conversion_Util.h  LegendreMatrix.h  OldCoil.h  Polynomial.h  Precision.h  hardware_acceleration.h  test.h
lib/: hardware_acceleration.lib
src/: Coil.cxx  CoilData.cxx  Conversion_Util.cxx  LegendreMatrix.cxx  OldCoil.cxx  Polynomial.cxx  PyMain.cxx  PyMain.h  main.cpp  main.cxx  test.cxx
src/Benchmark/: Benchmark.h  BenchmarkFields.cxx  BenchmarkForce.cxx  BenchmarkMInductanceGeneral.cxx  BenchmarkMInductanceZAxis.cxx  BenchmarkMTD.cxx  BenchmarkMiscellaneous.cxx  CMakeLists.txt  PyBindings.cxx
src/Benchmark/Coil/Fields/: BenchCoilFields.cxx  BenchCoilFieldsEveryCoil.cxx  BenchCoilFieldsScaling.cxx  BenchFields.cxx  BenchFieldsEveryCoil.cxx  BenchFieldsScaling.cxx
src/Benchmark/Coil/MInductanceAndForce/: BenchCoilComputeAll.cxx  BenchCoilForce.cxx  BenchCoilMInductanceGeneral.cxx  BenchCoilMInductanceZAxis.cxx  BenchComputeAll.cxx  BenchForce.cxx  BenchMInductanceZAxis.cxx
src/Benchmark/CoilGroup/: BenchGroupFields.cxx  BenchGroupFieldsScaling.cxx  BenchGroupMInductanceAndForce.cxx  GroupFields.cxx  GroupMInductanceAndForce.cxx
src/Benchmark/Other/: BenchMathFunctions.cxx
src/CUDAUtils/: CMakeLists.txt
src/CUDAUtils/BufferReduce/: CUDABufferReduce.h
src/CUDAUtils/ConstantsAndStructs/: CUDAConstants.h  CoilDataStructs.h
src/CUDAUtils/MemoryManagement/: GPUMemoryManagement.cu  GPUMemoryManagement.h
src/Coil/: CMakeLists.txt  CalculateAllFieldsMethods.cxx  CalculateAllMethods.cxx  CalculateFieldsFast.cxx  CalculateFieldsMethods.cxx  CalculateFieldsSlow.cxx  CalculateForceMethods.cxx  CalculateMInductanceMethods.cxx  Coil.cxx  Coil.h  CoilPairArguments.cxx  CoilPairArgumentsCPUMethods.cxx  CoilPairArgumentsGPUMethods.cxx  CoilType.h  ComputeAllPointsMethods.cxx  ComputeForceMethods.cxx  ComputeMInductanceMethods.cxx  ComputeMethod.h  ComputePointMethods.cxx  MainCalculationMethods.cxx  MassComputeMethods.cxx  PointComputeMethods.cxx  PrecisionArguments.cxx  PrecisionArrays.cxx  PrecisionFactor.cxx  PrecisionGlobalVars.h  PyBindings.cxx  SelfInductanceMethods.cxx
src/Coil/CUDAFunctions/: CMakeLists.txt
src/Coil/CUDAFunctions/CoilGroupKernels/: CoilGroupAcceleration.h  FieldAGroup.cu  FieldBGroup.cu  FieldGGroup.cu  ForceGroup.cu  MInductanceGroup.cu
src/Coil/CUDAFunctions/CoilKernels/: CoilAcceleration.h  FieldA.cu  FieldB.cu  FieldG.cu  Force.cu  MInductance.cu
src/Coil/CUDAFunctions/ErrorCheck/: CUDAErrorCheck.h
src/Coil/CUDAKernels/: CMakeLists.txt  CoilAcceleration.h  FieldA.cu  FieldB.cu  FieldG.cu  Force.cu  MInductance.cu
src/Coil/EnumsAndConstants/: CoilType.h  PrecisionGlobalVars.h
src/Coil/Fields/: CalculateAllFieldsGPU.cxx  CalculateAllFieldsMT.cxx  CalculateAllFieldsMethods.cxx  CalculateFieldsFast.cxx  CalculateFieldsMethods.cxx  CalculateFieldsSlow.cxx  ComputeFieldsMethods.cxx
src/Coil/ForceAndTorque/: CalculateForceArrangements.cxx  CalculateForceGeneral.cxx  CalculateForceMethods.cxx  CalculateForceZAxis.cxx  ComputeForceMethods.cxx
src/Coil/MInductance/: CalculateMInductanceArrangements.cxx  CalculateMInductanceGeneral.cxx  CalculateMInductanceMethods.cxx  CalculateMInductanceZAxis.cxx  ComputeMInductanceMethods.cxx
src/Coil/PrecisionArguments/: CoilPairArguments.cxx  PrecisionArguments.cxx
src/Coil/Utils/: CalculateAttributes.cxx  SupportFunctions.cxx
src/CoilGroup/: CMakeLists.txt  CalculateFieldsGPU.cxx  CalculateMTD.cxx  CoilGroup.cxx  CoilGroup.h  ComputeFieldsMethods.cxx  PyBindings.cxx
src/CoilGroup/CUDAKernels/: CMakeLists.txt  CoilGroupAcceleration.h  FieldAGroup.cu  FieldBGroup.cu  FieldEGroup.cu  FieldGGroup.cu  ForceGroup.cu  MInductanceGroup.cu
src/CoilGroup/Fields/: CalculateFieldsGPU.cxx  CalculateFieldsMT.cxx  CalculateFieldsMTD.cxx  ComputeFields.cxx
src/CoilGroup/ForceAndTorque/: CalculateForceGPU.cxx  CalculateForceMTD.cxx  ComputeForce.cxx
src/CoilGroup/MInductance/: CalculateMInductanceGPU.cxx  CalculateMInductanceMTD.cxx  ComputeMInductance.cxx
src/CoilGroup/Utils/: GPUArgumentGeneration.cxx
src/Comp/: CMakeLists.txt  Comp.h  CompForce.cxx  CompMInductanceGeneral.cxx  CompMInductanceZAxis.cxx  CompMTD.cxx  CompMiscellaneous.cxx
src/Compare/: CMakeLists.txt  Compare.h  CompareForce.cxx  CompareMInductanceGeneral.cxx  CompareMInductanceZAxis.cxx  CompareMTD.cxx  CompareMiscellaneous.cxx  PyBindings.cxx
src/Compare/MInductanceAndForce/: CompForce.cxx  CompMInductanceGeneral.cxx  CompMInductanceZAxis.cxx
src/Compare/Other/: CompFieldMTD.cxx  CompMiscellaneous.cxx
src/ConversionUtil/: CMakeLists.txt  ConversionUtil.cxx  ConversionUtil.h
src/LegendreMatrix/: CMakeLists.txt  LegendreMatrix.cxx  LegendreMatrix.h
src/Math/: CMakeLists.txt  CustomMath.cxx  CustomMath.h
src/Tensor/: CMakeLists.txt  CoordVector3.cxx  FieldVector3.cxx  Matrix3.cxx  Matrix3Array.cxx  PyBindings.cxx  Tensor.h  Vector3Array.cxx
src/Tensor/Matrix/: Matrix3.cxx  Matrix3Array.cxx
src/Tensor/Vector/: Vector3.cxx  Vector3Array.cxx
src/Test/: BabicTestCases.cxx  CMakeLists.txt  ForceTestCases.cxx  MInductanceGeneralTestCases.cxx  OldCoilTests.cxx  PaperTestCases.cxx  Test.cxx  Test.h  TestAmpereForce.cxx  TestArgumentGeneration.cxx  TestArrangements.cxx  TestFields.cxx  TestFieldsPerformance.cxx  TestForce.cxx  TestMInductanceGeneral.cxx  TestMInductanceZAxis.cxx  TestMTD.cxx  TestMiscellaneous.cxx  TestPerformance.cxx
src/Test/MInductanceAndForce/: TestArrangements.cxx  TestForce.cxx  TestMInductanceGeneral.cxx  TestMInductanceZAxis.cxx
src/Test/Other/: TestArgumentGeneration.cxx  TestFields.cxx  TestMiscellaneous.cxx
src/Vector3/: CMakeLists.txt  CoordVector3.cxx  FieldVector3.cxx  Vector3.cxx  Vector3.h
(+41 files in other folders)
